--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,11 @@ services:
   - type: web
     name: skillifyi
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: bash setup.sh && gunicorn skillifyi_backend.wsgi:application
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py collectstatic --noinput --clear
+      python manage.py migrate
+    startCommand: gunicorn skillifyi_backend.wsgi:application
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.7
@@ -12,6 +15,4 @@ services:
       - key: DEBUG
         value: False
       - key: DATABASE_URL
-        fromDatabase:
-          name: skillifyi-db
-          property: connectionString 
+        value: postgresql://root:O0PjVon7y55LffXO8AWCweIPp8c9jSZp@dpg-cvkj63d6ubrc73fpknu0-a.oregon-postgres.render.com/skillifyidb 
