--- a/render.yaml
+++ b/render.yaml
@@ -15,4 +15,8 @@ services:
       - key: DEBUG
         value: False
       - key: DATABASE_URL
-        value: postgresql://root:O0PjVon7y55LffXO8AWCweIPp8c9jSZp@dpg-cvkj63d6ubrc73fpknu0-a.oregon-postgres.render.com/skillifyidb 
+        value: postgresql://root:O0PjVon7y55LffXO8AWCweIPp8c9jSZp@dpg-cvkj63d6ubrc73fpknu0-a.oregon-postgres.render.com/skillifyidb
+      - key: ALLOWED_HOSTS
+        value: .onrender.com
+      - key: CSRF_TRUSTED_ORIGINS
+        value: https://*.onrender.com 
